--- a/src/energy.tex
+++ b/src/energy.tex
@@ -234,7 +234,7 @@ E_v=K+c_v^{(d)}T+\Phi.
 \end{equation}
 If the vertical integral is performed in a mass-based vertical coordinate, e.g., pressure, then the integrated TE equation for a dry atmosphere can be written as
 \begin{equation}
-\frac{d}{dt}\int_{p=p_s}^{p=p_{top}}\iint_{\mathcal{S}} E_p \rho^{(d)}\, dA\, dp + \frac{d}{dt}\iint_{\mathcal{S}}\Phi_sp_s dA =\int_{p=p_s}^{p=p_{top}}\iint_{\mathcal{S}} F_{net}\, \rho dA\, dp,
+\frac{d}{dt}\int_{p=p_s}^{p=p_{top}}\iint_{\mathcal{S}} E_p \, dA\, dp + \frac{d}{dt}\iint_{\mathcal{S}}\Phi_sp_s dA =\int_{p=p_s}^{p=p_{top}}\iint_{\mathcal{S}} F_{net}\, dA\, dp,
 \end{equation}
 \citep[e.g., ][]{K1974MWR} where
 \begin{equation}
@@ -265,7 +265,8 @@ In the CAM physical parameterizations a different definition of TE is used. Due 
 \end{equation}
 We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE as the {\em{energy consistent}} version.
 
-
+\subsection{{\color{red}{Some remarks on local total energy conservation}}}
+{\color{red}{[I think you missed an opportunity to remind the reader of the additional complexities of a moist atmosphere here. The development and discussion is currently entirely framed in term of the global integrals, but maybe you should say that there are local considerations at play also. Whenever an air parcel containing water undergoes a phase change its temperature should change, and its energy (enthalpy), and mass should not. When the air parcel gains or loses water via sedimentation or precipitation or via a fixer or borrower to maintain some physical property like positive definiteness, then it has implications for the mass and heat content of the parcel, and the heat capacity of the parcel. And that affects the energy and mass of the column, and that affects the global energy. So anything that changes these state variables locally has implications for the energy budget. I think you need these kind of statements to be able to say that the current model framework only tries to account for some of the terms in the energy and mass budget, and also treats only a subset of the heat capacities/latent heat of fusion and vaporization. So when surface pressure is fixed during a physical parameterization update but the water vapor is changed an inconsistency appears. If a clipper is used on vapor or condense water, that is a spurious source of water, but it is not accounted for in the thermodynamics, or through a surface flux. Etc. I think it is worth saying this kind of stuff before you get into the global integrals because it won't necessarily be obvious to the audience how for the example of figure 5, that clipping of cloud water will produce an energy source or sink. ]}}
 \subsection{Spurious energy sources and sinks}\label{subsec:spuriousE}
 In a weather/climate model TE conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
 \begin{enumerate}
@@ -286,11 +287,13 @@ In a weather/climate model TE conservation errors can appear in many places thro
     is not conserved. Henceforth we assume that the dynamical core is based on an inherently mass-conservative formulation which is the case for CAM-SE and CAM-FV.}}    
 \item \label{item:pdc}{\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
 \begin{itemize}
-\item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time.
+\item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time. {\color{red}{The PDC `dribblin' errors can be split into 3 contributions:}}.
 
-  {\color{red}{PDC errors in temperature tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the equivalent dry thermal energy change when the temperature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The discrepancy occurs because $\Delta M^{(d)}$ changes during each dynamics time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments. Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
+  {\color{red}{{\em{Thermal energy `dribbling' error}}: PDC errors in temperature tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the equivalent dry thermal energy change when the temperature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The discrepancy occurs because $\Delta M^{(d)}$ changes during each dynamics time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments. 
 
-A different PDC error can occur when mass-variable tendencies such as vapor vapor forcing, cloud liquid, etc. are `dribbled' during the dynamical core integration. This can lead to a spurious source if there is logic in the dynamical core preventing mixing ratios to become negative. This is referred to as `clipping' PDC errors and are described/discussed in detail in Section \ref{sec:noise}.}}
+{\em{Kinetic energy `dribbling' error}}: Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
+
+{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location, the mass-increment from the parameterizations may be larger than the mass available. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' change the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
@@ -306,7 +309,7 @@ By computing the global TE averages $\gi{E}$ at appropriate places in the model 
 
 Before defining the individual terms in detail we briefly review the model time stepping sequence starting with the physics component as illustrated in Figure \ref{fig:dAD}. The energy fixer is applied first to compensate for the spurious net energy change from all components introduced during the previous time step. We will describe this in more detail after the various sources and sinks are elucidated. The parameterizations are applied next and are required to be energy conserving. They update the state and accumulate the total physics tendency (forcing). At this stage the state is saved for use in the energy fixer in the next time step. Any changes in the global average energy after this are spurious and are compensated by the fixer. The parameterizations update the water vapor but not the moist pressure, implying a non-physical change in the dry mass of the atmosphere. The dry mass correction corrects the dry mass back to its proper value.
 
-The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step the physics and is sub-stepped. The remapped forcing is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the specified momentum viscosity is calculate locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
+The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step {\color{red}{than}} the physics and is sub-stepped. The remapped {\color{red}{physics increment}} is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the specified momentum viscosity is calculate locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
 
 At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics grids (if applicable), dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
 
@@ -515,7 +518,7 @@ The majority of the noise with {\em{state-update}} ({\tt{ftype=1}}) physics-dyna
 \subsubsection{Spurious TE tendencies from physics-dynamics coupling}
 When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. {\color{red}{As described in item \ref{item:pdc} (Section \ref{subsec:spuriousE}), PDC errors can be attributed to underlying pressure changes during the `dribbling' of temperature and velocity component increments as well as PDC `clipping' errors in the water variables (the process in which `clipping' occurs is described in detail in the previous subsection). The TE error associated with `clipping' PDC error occurs due to the mass-change prescribed by physics consistent with the fluxes in/out of the physics column does not equal the actual mass change applied to the dynamical core state due to `clipping'}}
 
-{\color{red}{For {\tt{ftype=2}} PDC only the increment for temperature and momentum are {\em{dribbled}} and the  PDC TE tendency is $\partial \gi{E}^{({pdc})}=-0.484 W/m^2$. When using {\tt{ftype=0}} PDC also tracer increments are  {\em{dribbled}}, which can lead to `clipping' PDC TE errors, a similar TE tendency results $\partial \gi{E}^{({pdc})}=-0.469 W/m^2$. The difference between the TE PDC tenendency for {\tt{ftype=2}} and {\tt{ftype=0}} provides an estimate of the TE PDC `clipping' error. The `clipping' PDC TE tenendency is very small $~0.015 W/m^2$.}}
+{\color{red}{For {\tt{ftype=2}} PDC only the increment for temperature and momentum are {\em{dribbled}} whereas tracer mass is state-updated (no `clipping' errors). This results in a spurious PDC TE tendency of $\partial \gi{E}^{({pdc})}=-0.484 W/m^2$. When using {\tt{ftype=0}} PDC also tracer increments are  {\em{dribbled}} (hence there are `clipping' PDC errors) a similar TE tendency results $\partial \gi{E}^{({pdc})}=-0.469 W/m^2$. The difference between the TE PDC tenendency for {\tt{ftype=2}} and {\tt{ftype=0}} provides an estimate of the TE PDC `clipping' error. The `clipping' PDC TE tenendency is very small $~0.015 W/m^2$.}}
 
 %For {\em{dribbling}} ({\tt{ftype=0}}) and {\em{combination}} ({\tt{ftype=2}}) the PDC TE tendency is $\partial \gi{E}^{({pdc})}=-0.05 W/m^2$ and thus rather small compared to the viscosity TE dissipation rates. Since $\partial \gi{E}^{({pdc})}$ are the same (to the second digit) for  {\em{dribbling}} ({\tt{ftype=0}}) and  {\em{combination}} ({\tt{ftype=2}}) it is the momentum and temperature {\em{dribbling}} errors that dominate $\partial \gi{E}^{({pdc})}$ {\color{red}{and not the PDC `clipping' errors}}.
 
